--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-20 21:00+1000\n"
+"POT-Creation-Date: 2023-11-26 15:14+1000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,38 +17,114 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-#: task_manager/templates/base.html:10
+
+#: task_manager/templates/base.html:9
 msgid "Task manager Hexlet"
 msgstr "Менеджер задач Хекслета"
 
-#: task_manager/templates/base.html:21
+#: task_manager/templates/components/footer.html:5
 msgid "My GitHub"
 msgstr "Мой ГитХаб"
 
-#: task_manager/templates/index.html:19
-msgid "Hello from Hexlet"
-msgstr "Привет от Хекслета!"
-
-#: task_manager/templates/index.html:20
-msgid "Practical programming courses"
-msgstr "Практические курсы по программированию"
-
-#: task_manager/templates/index.html:22
-msgid "Learn more"
-msgstr "Узнать больше"
-
-#: task_manager/templates/navigation.html:3
+#: task_manager/templates/components/logged_navbar.html:3
+#: task_manager/templates/components/navigation.html:3
 msgid "Task manager"
 msgstr "Менеджер задач"
 
-#: task_manager/templates/navigation.html:10
+#: task_manager/templates/components/logged_navbar.html:10
+#: task_manager/templates/components/navigation.html:10
+#: task_manager/templates/users/index.html:12
 msgid "Users"
 msgstr "Пользователи"
 
-#: task_manager/templates/navigation.html:14
+#: task_manager/templates/components/logged_navbar.html:14
+msgid "Statuses"
+msgstr "Статусы"
+
+#: task_manager/templates/components/logged_navbar.html:17
+msgid "Tags"
+msgstr "Метки"
+
+#: task_manager/templates/components/logged_navbar.html:20
+msgid "Tasks"
+msgstr "Задачи"
+
+#: task_manager/templates/components/logged_navbar.html:28
+msgid "Exit"
+msgstr "Выход"
+
+#: task_manager/templates/components/navigation.html:14
+#: task_manager/templates/users/login.html:9
 msgid "Login"
 msgstr "Вход"
 
-#: task_manager/templates/navigation.html:18
+#: task_manager/templates/components/navigation.html:18
 msgid "Sign up"
 msgstr "Регистрация"
+
+#: task_manager/templates/index.html:15
+msgid "Hello from Hexlet"
+msgstr "Привет от Хекслета!"
+
+#: task_manager/templates/index.html:16
+msgid "Practical programming courses"
+msgstr "Практические курсы по программированию"
+
+#: task_manager/templates/index.html:18
+msgid "Learn more"
+msgstr "Узнать больше"
+
+#: task_manager/templates/users/create.html:9
+#: task_manager/templates/users/create.html:16
+msgid "Sing up"
+msgstr "Зарегистрировать"
+
+#: task_manager/templates/users/index.html:19
+msgid "ID"
+msgstr "ID"
+
+#: task_manager/templates/users/index.html:20
+msgid "User name"
+msgstr "Имя пользователя"
+
+#: task_manager/templates/users/index.html:21
+msgid "Full name"
+msgstr "Полное имя"
+
+#: task_manager/templates/users/index.html:22
+msgid "Create date"
+msgstr "Дата создания"
+
+#: task_manager/templates/users/index.html:35
+msgid "Edit"
+msgstr "Изменить"
+
+#: task_manager/templates/users/index.html:37
+msgid "Delete"
+msgstr "Удалить"
+
+#: task_manager/templates/users/login.html:15
+#, fuzzy
+#| msgid "Sign up"
+msgid "Sign in"
+msgstr "Регистрация"
+
+#: task_manager/templates/users/update.html:9
+msgid "Update profile"
+msgstr "Изменить"
+
+#: task_manager/templates/users/update.html:15
+msgid "Update"
+msgstr "Изменить"
+
+#: task_manager/users/views.py:32
+msgid "User is successfully created"
+msgstr "Пользователь успешно создан"
+
+#: task_manager/users/views.py:65
+msgid "User is successfully updated"
+msgstr "Пользователь изменен"
+
+#: task_manager/views.py:20
+msgid "You are logged in"
+msgstr "Вы разлогинены"
