--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-20 20:37+1000\n"
+"POT-Creation-Date: 2023-11-26 15:08+1000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,41 +16,142 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
-"(n%100>=11 && n%100<=14)? 2 : 3);\n"
-#: task_manager/templates/base.html:10
-msgid "Менеджер задач Хекслета"
-msgstr "Task manager Hexlet"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
+"%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#: task_manager/templates/base.html:21
-msgid "Мой ГитХаб"
-msgstr "My GitHub"
+#: task_manager/templates/base.html:9
+msgid "Task manager Hexlet"
+msgstr "Менеджер задач Хекслет"
 
-#: task_manager/templates/index.html:19
-msgid "Привет от Хекслета!"
-msgstr "Hello from Hexlet!"
+#: task_manager/templates/components/footer.html:5
+msgid "My GitHub"
+msgstr "Мой ГитХаб"
 
-#: task_manager/templates/index.html:20
-msgid "Практические курсы по программированию"
-msgstr "Practical programming courses"
+#: task_manager/templates/components/logged_navbar.html:3
+#: task_manager/templates/components/navigation.html:3
+msgid "Task manager"
+msgstr "Менеджер задач"
 
-#: task_manager/templates/index.html:22
-msgid "Узнать больше"
-msgstr "Learn more"
+#: task_manager/templates/components/logged_navbar.html:10
+#: task_manager/templates/components/navigation.html:10
+#: task_manager/templates/users/index.html:12
+msgid "Users"
+msgstr "Пользователи"
 
-#: task_manager/templates/navigation.html:3
-msgid "Менеджер задач"
-msgstr "Task manager"
+#: task_manager/templates/components/logged_navbar.html:14
+msgid "Statuses"
+msgstr "Статусы"
 
-#: task_manager/templates/navigation.html:10
-msgid "Пользователи"
-msgstr "Users"
+#: task_manager/templates/components/logged_navbar.html:17
+msgid "Tags"
+msgstr "Метки"
 
-#: task_manager/templates/navigation.html:14
-msgid "Вход"
-msgstr "Login"
+#: task_manager/templates/components/logged_navbar.html:20
+msgid "Tasks"
+msgstr "Задачи"
 
-#: task_manager/templates/navigation.html:18
-msgid "Регистрация"
-msgstr "Registration"
+#: task_manager/templates/components/logged_navbar.html:28
+msgid "Exit"
+msgstr "Выход"
+
+#: task_manager/templates/components/navigation.html:14
+#: task_manager/templates/users/login.html:9
+msgid "Login"
+msgstr "Вход"
+
+#: task_manager/templates/components/navigation.html:18
+msgid "Sign up"
+msgstr "Регистрация"
+
+#: task_manager/templates/index.html:15
+msgid "Hello from Hexlet"
+msgstr "Привет от Хекслета"
+
+#: task_manager/templates/index.html:16
+msgid "Practical programming courses"
+msgstr "Практические курсы по программированию"
+
+#: task_manager/templates/index.html:18
+msgid "Learn more"
+msgstr "Узнать больше"
+
+#: task_manager/templates/users/create.html:9
+#: task_manager/templates/users/create.html:16
+msgid "Sing up"
+msgstr "Регистрация"
+
+#: task_manager/templates/users/index.html:19
+msgid "ID"
+msgstr "ID"
+
+#: task_manager/templates/users/index.html:20
+msgid "User name"
+msgstr "Имя пользователя"
+
+#: task_manager/templates/users/index.html:21
+msgid "Full name"
+msgstr "Полное имя"
+
+#: task_manager/templates/users/index.html:22
+msgid "Create date"
+msgstr "Дата создания"
+
+#: task_manager/templates/users/index.html:35
+msgid "Edit"
+msgstr "Изменить"
+
+#: task_manager/templates/users/index.html:37
+msgid "Delete"
+msgstr "Удалить"
+
+#: task_manager/templates/users/login.html:15
+msgid "Sign in"
+msgstr "Вход"
+
+#: task_manager/templates/users/update.html:9
+msgid "Update profile"
+msgstr "Изменить"
+
+#: task_manager/templates/users/update.html:15
+msgid "Update"
+msgstr "Изменить"
+
+#: task_manager/users/views.py:32
+msgid "User is successfully created"
+msgstr "Пользователь успешно зарегистрирован"
+
+#: task_manager/users/views.py:65
+msgid "User is successfully updated"
+msgstr "Пользователь успешно изменен"
+
+#: task_manager/views.py:20
+msgid "You are logged in"
+msgstr "Вы залогинены"
+
+#~ msgid "Менеджер задач Хекслета"
+#~ msgstr "Task manager Hexlet"
+
+#~ msgid "Мой ГитХаб"
+#~ msgstr "My GitHub"
+
+#~ msgid "Привет от Хекслета!"
+#~ msgstr "Hello from Hexlet!"
+
+#~ msgid "Практические курсы по программированию"
+#~ msgstr "Practical programming courses"
+
+#~ msgid "Узнать больше"
+#~ msgstr "Learn more"
+
+#~ msgid "Менеджер задач"
+#~ msgstr "Task manager"
+
+#~ msgid "Пользователи"
+#~ msgstr "Users"
+
+#~ msgid "Вход"
+#~ msgstr "Login"
+
+#~ msgid "Регистрация"
+#~ msgstr "Registration"
