--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -140,7 +140,7 @@ msgstr "Удаление метки"
 #: task_manager/templates/labels/delete.html:17
 #, python-format
 msgid "Do you want to delete %(label_name)s?"
-msgstr "Вы хотите удалить %(label_name)s?"
+msgstr "Вы уверены, что хотите удалить %(label_name)s?"
 
 #: task_manager/templates/labels/delete.html:21
 #: task_manager/templates/statuses/delete.html:21
@@ -202,7 +202,7 @@ msgstr "Удаление статуса"
 #: task_manager/templates/statuses/delete.html:17
 #, python-format
 msgid "Do you want to delete %(status_name)s?"
-msgstr "Вы хотите удалить %(status_name)s?"
+msgstr "Вы уверены, что хотите удалить %(status_name)s?"
 
 #: task_manager/templates/statuses/index.html:25
 msgid "Сreate date"
@@ -224,7 +224,7 @@ msgstr "Удаление задачи"
 #: task_manager/templates/tasks/delete.html:17
 #, python-format
 msgid "Do you want to delete %(task_name)s?"
-msgstr "Вы хотите удалить %(task_name)s?"
+msgstr "Вы уверены, что хотите удалить %(task_name)s?"
 
 #: task_manager/templates/tasks/index.html:29
 #: task_manager/templates/tasks/index.html:65
@@ -264,7 +264,7 @@ msgstr "Изменение пользователя"
 #: task_manager/templates/users/delete.html:16
 #, python-format
 msgid "Do you want to delete %(user_first_name)s %(user_last_name)s?"
-msgstr "Вы хотите удалить %(user_first_name)s %(user_last_name)s?"
+msgstr "Вы уверены, что хотите удалить %(user_first_name)s %(user_last_name)s?"
 
 #: task_manager/templates/users/index.html:19
 msgid "ID"
