--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -101,7 +101,7 @@ msgstr "Задачи"
 
 #: task_manager/templates/components/logged_navbar.html:28
 msgid "Exit"
-msgstr "ыход"
+msgstr "Выход"
 
 #: task_manager/templates/components/navigation.html:14
 #: task_manager/templates/users/login.html:9
@@ -245,7 +245,7 @@ msgstr "Метка"
 
 #: task_manager/templates/tasks/index.html:53
 msgid "Only self tasks"
-msgstr ""
+msgstr "Только свои задачи"
 
 #: task_manager/templates/tasks/index.html:54
 msgid "Show"
@@ -257,10 +257,8 @@ msgid "Author"
 msgstr "Автор"
 
 #: task_manager/templates/tasks/show.html:16
-#, fuzzy
-#| msgid "Create task"
 msgid "View a task"
-msgstr "Создать задачу"
+msgstr "Просмотр задачи"
 
 #: task_manager/templates/tasks/show.html:62
 #: task_manager/templates/users/index.html:35
@@ -299,7 +297,7 @@ msgstr "Полное имя"
 
 #: task_manager/templates/users/login.html:15
 msgid "Sign in"
-msgstr "Вход"
+msgstr "Войти"
 
 #: task_manager/templates/users/update.html:9
 msgid "Update profile"
