--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -301,7 +301,7 @@ msgstr "Полное имя"
 
 #: task_manager/templates/users/login.html:15
 msgid "Sign in"
-msgstr "Вход"
+msgstr "Войти"
 
 #: task_manager/templates/users/update.html:9
 msgid "Update profile"
