Исправлен перевод кнопки register

--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-24 16:02+1000\n"
+"POT-Creation-Date: 2023-12-24 16:10+1000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -275,9 +275,12 @@ msgid "Update task"
 msgstr "Изменение задачи"
 
 #: task_manager/templates/users/create.html:9
-#: task_manager/templates/users/create.html:16
 msgid "Sing up"
 msgstr "Регистрация"
+
+#: task_manager/templates/users/create.html:16
+msgid "Register"
+msgstr "Зарегистрировать"
 
 #: task_manager/templates/users/delete.html:12
 msgid "User delete"
